crates/tych/src/tests/snapshots/struct_field_selector_bad2.snap
---
source: crates/tych/src/tests.rs
assertion_line: 910
expression: "(test[1], res)"
---
- "\nstruct Foo {\n    let b: int\n}\nfn main() {\n    let x: Foo\n    x.a\n}\n"
- Err: "composite `Foo` has no field: `a`"

