crates/tych/src/tests/snapshots/struct_field_selector_bad3.snap
---
source: crates/tych/src/tests.rs
assertion_line: 843
expression: "(test[1], res)"
---
- "\nstruct Foo {\n    let a: Bar,\n}\nfn main() {\n    let x: Foo\n    x.a\n}\n"
- Err: "Unknown type in let declaration: `Bar`"

