crates/tych/src/tests/snapshots/struct_field_selector_chained.snap
---
source: crates/tych/src/tests.rs
assertion_line: 942
expression: "(test[1], res)"
---
- "\nstruct Foo {\n    let a: int\n}\nstruct Bar {\n    let b: Foo\n}\nfn main() {\n    let x: Bar\n    x.b.a\n}\n"
- Ok:
    nodes:
      - kind:
          Struct:
            name: "main::Foo"
            fields:
              - kind:
                  Let:
                    name: a
                    antn: Int32
                    init: ~
            methods: []
      - kind:
          Struct:
            name: "main::Bar"
            fields:
              - kind:
                  Let:
                    name: b
                    antn:
                      Comp: "main::Foo"
                    init: ~
            methods: []
      - kind:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: x
                          antn:
                            Comp: "main::Bar"
                          init: ~
                    - kind:
                        FSelector:
                          comp:
                            kind:
                              FSelector:
                                comp:
                                  kind:
                                    Ident:
                                      name: x
                                      ty:
                                        Comp: "main::Bar"
                                field: b
                                ty:
                                  Comp: "main::Foo"
                          field: a
                          ty: Int32
                  ty: Int32

