crates/tych/src/tests/snapshots/struct_fields_only.snap
---
source: crates/tych/src/tests.rs
assertion_line: 919
expression: "(test[1], res)"
---
- "\nstruct Foo {\n    let a: int\n    let b: float\n}\n"
- Ok:
    nodes:
      - kind:
          Struct:
            name: "main::Foo"
            fields:
              - kind:
                  Let:
                    name: a
                    antn: Int32
                    init: ~
              - kind:
                  Let:
                    name: b
                    antn: Float
                    init: ~
            methods: []

