crates/tych/src/tests/snapshots/struct_method_selector_bad1.snap
---
source: crates/tych/src/tests.rs
assertion_line: 874
expression: "(test[1], res)"
---
- "\nfn main() {\n    let f: int\n    f.bar()\n}\n"
- Err: "Attempt to use selector on non-composite type: int32"

