crates/tych/src/tests/snapshots/struct_method_selector_bad2.snap
---
source: crates/tych/src/tests.rs
assertion_line: 919
expression: "(test[1], res)"
---
- "\nstruct Foo {\n    fn bar() {}\n}\nfn main() {\n    let f: Foo\n    f.baz()\n}\n"
- Err: "composite `main::Foo` has no method: `baz`"

