crates/tych/src/tests/snapshots/struct_method_selector_bad3.snap
---
source: crates/tych/src/tests.rs
assertion_line: 919
expression: "(test[1], res)"
---
- "\nstruct Foo {\n    fn bar() {}\n}\nfn main() {\n    let f: Foo\n    f.bar(1)\n}\n"
- Err: "Call to `main::Foo.bar()` takes 0 args and 1 were given"

