crates/tych/src/tests/snapshots/struct_methods_only.snap
---
source: crates/tych/src/tests.rs
assertion_line: 864
expression: "(test[1], res)"
---
- "\nstruct Foo {\n    fn c() -> int {\n        1\n    }\n    fn d() {}\n}\n"
- Ok:
    nodes:
      - kind:
          Struct:
            name: Foo
            fields: []
            methods:
              - kind:
                  Fn:
                    proto:
                      name: _Foo_c
                      args: []
                      ret_ty: Int32
                      is_extern: false
                    body:
                      kind:
                        Block:
                          list:
                            - kind:
                                Lit:
                                  value:
                                    Int32: 1
                                  ty: Int32
                          ty: Int32
              - kind:
                  Fn:
                    proto:
                      name: _Foo_d
                      args: []
                      ret_ty: Void
                      is_extern: false
                    body:
                      kind:
                        Block:
                          list: []
                          ty: Void

