crates/tych/src/tests/snapshots/struct_mix.snap
---
source: crates/tych/src/tests.rs
assertion_line: 797
expression: "(test[1], res)"
---
- "\nstruct Foo {\n    let a: int\n    let b: float\n\n    fn c() -> int { 1 }\n}\n"
- Ok:
    nodes:
      - kind:
          Struct:
            name: Foo
            fields:
              - kind:
                  Let:
                    name: a
                    antn: Int32
                    init: ~
              - kind:
                  Let:
                    name: b
                    antn: Float
                    init: ~
            methods:
              - kind:
                  Fn:
                    proto:
                      name: c
                      args: []
                      ret_ty: Int32
                      is_extern: false
                    body:
                      kind:
                        Block:
                          list:
                            - kind:
                                Lit:
                                  value:
                                    Int32: 1
                                  ty: Int32
                          ty: Int32

